--- a/stats/07_exploring_with_pandas/Johns_Hopkins_COVID19_with_Pandas_Matplotlib.ipynb
+++ b/stats/07_exploring_with_pandas/Johns_Hopkins_COVID19_with_Pandas_Matplotlib.ipynb
@@ -5,7 +5,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as mpatches\n",
+    "import matplotlib.t"
+   ]
   }
  ],
  "metadata": {
