--- a/stats/07_exploring_with_pandas/Johns_Hopkins_COVID19_with_Pandas_Matplotlib.ipynb
+++ b/stats/07_exploring_with_pandas/Johns_Hopkins_COVID19_with_Pandas_Matplotlib.ipynb
@@ -2,15 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as mpatches\n",
-    "import matplotlib.t"
+    "import matplotlib.ticker as ticker\n",
+    "import io\n",
+    "import glob"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[JHU CSSE COVID-19 Data](https://github.com/CSSEGISandData/COVID-19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
