--- a/stats/07_exploring_with_pandas/Johns_Hopkins_COVID19_with_Pandas_Matplotlib.ipynb
+++ b/stats/07_exploring_with_pandas/Johns_Hopkins_COVID19_with_Pandas_Matplotlib.ipynb
@@ -4123,7 +4123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4207,7 +4207,7 @@
        "5018  16911.142368                   NaN  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4217,7 +4217,7 @@
     "# sum(df_guam['Confirmed'])\n",
     "\n",
     "\n",
-    "df_guam.sort_values(by=['Last_Update']).tail(1)"
+    "df_guam.sort_values(by=['Last_Update']).tail(1) #['Confirmed']"
    ]
   },
   {
